Switched List with ImmutableList